tests/parser/command_form/test_04.m.out
In test_04.m, line 4
|   cd foo
|      ^^^ error: expected NEWLINE, found CARRAY instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
