tests/parser/command_form/test_04.m
% (c) Copyright 2019 Florian Schanda

function test_04()
  cd foo
end
